[package]
name = "graphql-demo"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.5"
async-graphql = "2.0.11"
tokio = { version = "0.2", features = ["macros", "full"] }
async-graphql-warp = "2.0.12"
